<resources>
    <string name="app_name">PfeDomotique</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="temerature">temerature</string>
    <string name="humidite">Humidite</string>
    <string name="iqa">IQA</string>
    <string name="your_email_com">your@email.com</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="sign_in">S\'identifier</string>
    <string name="no_account_text">Vous n\'avez pas de compte ?</string>
    <string name="create_acount">Créer un compte</string>
</resources>